[AA] Gmail as separate module, templates & refacto