@@ -34,17 +34,17 @@ class RemindersInfoContributorTest {
     final var reminders = (List<Map<String, Object>>) appDetails.get("reminders");
 
     assertEquals(2, reminders.size());
-    assertEquals("errors", reminders.get(0).get("name"));
-    assertEquals("errors-topic", reminders.get(0).get("topic"));
-    assertEquals(true, reminders.get(0).get("enabled"));
-    assertEquals("adhoc", reminders.get(1).get("name"));
+    assertEquals("errors", reminders.getFirst().get("id"));
+    assertEquals("errors-topic", reminders.getFirst().get("topic"));
+    assertEquals(true, reminders.getFirst().get("enabled"));
+    assertEquals("adhoc", reminders.get(1).get("id"));
     assertEquals("adhoc-topic", reminders.get(1).get("topic"));
     assertEquals(false, reminders.get(1).get("enabled"));
   }
 
-  private static RemindlyAppProperties.ReminderProperties reminder(String name, String topic, boolean enabled) {
+  private static RemindlyAppProperties.ReminderProperties reminder(String id, String topic, boolean enabled) {
     final var reminder = new RemindlyAppProperties.ReminderProperties();
-    reminder.setName(name);
+    reminder.setId(id);
     reminder.setTopic(topic);
     reminder.setEnabled(enabled);
     return reminder;
